==> Ever-Never/Mic_LE_Audio/nrf5340_audio_bidirection/src/drivers/es8388.c <==
#include <zephyr/kernel.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <zephyr/drivers/i2c.h>
#include <zephyr/device.h>
#include "macros_common.h"
#include "hw_codec.h"
#include "audio_hal.h"
#include "pair_ultilities.h"
#include <zephyr/logging/log.h>
#include "es8388.h"
#define BOARD_PA_GAIN 0
#define ES8388_DAC_VOL_CFG_DEFAULT() {                      \
    .max_dac_volume = 0,                                    \
    .min_dac_volume = -96,                                  \
    .board_pa_gain = BOARD_PA_GAIN,                         \
    .volume_accuracy = 0.5,                                 \
    .dac_vol_symbol = -1,                                   \
    .zero_volume_reg = 0,                                   \
    .reg_value = 0,                                         \
    .user_volume = 0,                                       \
    .offset_conv_volume = NULL,                             \
}

static int es_read_reg(uint8_t reg_add, uint8_t *p_data)
{
    int ret;
    struct i2c_msg msgs[2];
    //uint8_t write_data[2] = {reg_add, 0};
    uint8_t read_data;
    if (!device_is_ready(i2c_codec) || p_es8388_cfg == NULL) {
		return -EIO;
	}
    memset(msgs, 0, sizeof(msgs));

    msgs[0].buf = &reg_add;
    msgs[0].len = 1;
    msgs[0].flags = I2C_MSG_WRITE;

    msgs[1].buf = (uint8_t*)&read_data;
    msgs[1].len = 1;
    msgs[1].flags = I2C_MSG_READ;

    ret = i2c_transfer(i2c_codec, msgs, 2 , ES8388_ADDR);
    *p_data = read_data;
    if(ret)
    {
        LOG_ERR("Failed to read i2c register\r\n");
        return ret;
    }
    return ret;
}

int es8388_write_reg(uint8_t reg_add, uint8_t data)
{
    int ret;
    uint8_t write_data[2];
    struct i2c_msg msg;
    if (!device_is_ready(i2c_codec) || p_es8388_cfg == NULL) {
		return -EIO;
	}
    memset(&msg, 0, sizeof(msg));
    write_data[0] = reg_add;
    write_data[1] = data;
    msg.buf = write_data;
    msg.len = sizeof(write_data);
    msg.flags = I2C_MSG_WRITE | I2C_MSG_STOP;
    ret = i2c_transfer(i2c_codec, &msg, 1 , ES8388_ADDR);
    if(ret)
    {
        return ret;
    }
    return 0;
}

int es8388_start(es_module_t mode)
{
    int res = 0;
    res = es8388_openbus(&es8388_cfg);
    uint8_t prev_data = 0, data = 0;
    es_read_reg(ES8388_DACCONTROL21, &prev_data);
    if (mode == ES_MODULE_LINE) {
        res |= es8388_write_reg(ES8388_DACCONTROL16, 0x09); // 0x00 audio on LIN1&RIN1,  0x09 LIN2&RIN2 by pass enable
        res |= es8388_write_reg(ES8388_DACCONTROL17, 0x50); // left DAC to left mixer enable  and  LIN signal to left mixer enable 0db  : bupass enable
        res |= es8388_write_reg(ES8388_DACCONTROL20, 0x50); // right DAC to right mixer enable  and  LIN signal to right mixer enable 0db : bupass enable
        res |= es8388_write_reg(ES8388_DACCONTROL21, 0xC0); //enable adc
    } else {
        res |= es8388_write_reg(ES8388_DACCONTROL21, 0x80);   //enable dac
    }
    es_read_reg(ES8388_DACCONTROL21, &data);
    if (prev_data != data) {
        res |= es8388_write_reg(ES8388_CHIPPOWER, 0xF0);   //start state machine
        // res |= es8388_write_reg(ES8388_CONTROL1, 0x16);
        // res |= es8388_write_reg(ES8388_CONTROL2, 0x50);
        res |= es8388_write_reg(ES8388_CHIPPOWER, 0x00);   //start state machine
    }
    if (mode == ES_MODULE_ADC || mode == ES_MODULE_ADC_DAC || mode == ES_MODULE_LINE) {
        res |= es8388_write_reg(ES8388_ADCPOWER, 0x00);   //power up adc and line in
    }
    if (mode == ES_MODULE_DAC || mode == ES_MODULE_ADC_DAC || mode == ES_MODULE_LINE) {
        res |= es8388_write_reg(ES8388_DACPOWER, 0x3c);   //power up dac and line out
        res |= es8388_set_voice_mute(false);
        LOG_DBG("es8388_start default is mode:%d", mode);
    }

    return res;
}

int es8388_ctrl_state(audio_hal_codec_mode_t mode, audio_hal_ctrl_t ctrl_state)
{
    int res = 0;
    int es_mode_t = 0;
    switch (mode) {
        case AUDIO_HAL_CODEC_MODE_ENCODE:
            es_mode_t  = ES_MODULE_ADC;
            break;
        case AUDIO_HAL_CODEC_MODE_LINE_IN:
            es_mode_t  = ES_MODULE_LINE;
            break;
        case AUDIO_HAL_CODEC_MODE_DECODE:
            es_mode_t  = ES_MODULE_DAC;
            break;
        case AUDIO_HAL_CODEC_MODE_BOTH:
            es_mode_t  = ES_MODULE_ADC_DAC;
            break;
        default:
            es_mode_t = ES_MODULE_DAC;
            LOG_WRN("Codec mode not support, default is decode mode");
            break;
    }
    if (AUDIO_HAL_CTRL_STOP == ctrl_state) {
        res = es8388_stop(es_mode_t);
    } else {
        res = es8388_start(es_mode_t);
        LOG_DBG("start default is decode mode:%d", es_mode_t);
    }
    return res;
}
